build: config library names
